ixed mentor code review comments.